<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">doIT</string>
    <string name="app_id">575878422500726</string>
    <string name="login_button_fb">Log in with Twitter</string>
    <string name="login_title_1">do</string>
    <string name="login_title_2">IT</string>
    <string name="title_activity_event_list">listIT</string>
    <string name="title_activity_event_details">seeIT</string>
    <string name="title_activity_create_event">makeIT</string>
    <string name="title_activity_create_location">makeIT</string>
    <string name="title_activity_location">mapIT</string>
    <string name="abCreate">Create Event</string>
    <string name="abMap">Map</string>
    <string name="abList">List of Events</string>
    <string name="minAtt">Min Attendees:</string>
    <string name="maxAtt">Max Attendees:</string>
    <string name="desc">Description:</string>
    <string name="descBody">Description (optional)</string>
    <string name="timeDesc">Time of Event:</string>
    <string name="title_activity_create_event_map">CreateEventMapActivity</string>
    <string name="action_logout">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">Save</string>
    <string name="startTime">Start time:</string>
    <string name="endTime">End time:</string>
    <string name="location">Location</string>
    <string name="locationCreate">Location:</string>
    <string name="chooseSport">Choose a Sport:</string>
    <string name="errSaveEventTitle">Error saving event</string>
    <string name="OK">OK</string>
    <string name="errSaveEventMsg">Sorry but this event is finished or cancelled, please join another event</string>
    <string name="dialogStartTime">Start Time</string>
    <string name="dialogEndTime">End Time</string>
    <string name="errSetTime">Error with setting time</string>
    <string name="errLowEnd">End time needs to be after start time</string>
    <string name="errHighStart">Start time needs to be before end time</string>
    <string name="errLowTime">That time is before the current time</string>
    <string name="errNoEvent">Please choose a sport</string>
    <string name="errNoAtt">You never told me how many people can join!</string>
    <string name="errLowAtt">Can\'t have fun with that many people! Add some more!</string>
    <string name="errNoLoc">No location selected</string>
    <string name="errNoStartTime">Please select a start time</string>
    <string name="errNoEndTime">Please select an end time</string>
    <string name="errMissingDataTitle">Missing data in field</string>
    <string name="hintStartTime">Click to select a start time</string>
    <string name="getData">Getting event data...</string>
    <string name="getLoc">Getting user location</string>
    <string name="saving">Saving...</string>
    <string name="emptyListText">Nothing seems to be happening here. Pull down to refresh or start something!</string>
    
</resources>
